[package]
name = "cw-prb-math"
version = "1.0.0"
authors = ["hoomp3"]
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "bench_main"
harness = false

[features]
default = ["ethnum"]
ethnum = []
arbitrary = ["ethnum/arbitrary"]
macros = ["ethnum/macros"]
testing = ["arbitrary", "macros"]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ethnum = { git = "https://github.com/aether-protocol/ethnum-rs", branch = "cosmos", features = ["cosmos"] }
primitive-types = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }