[package]
name = "cw-prb-math"
version = "1.0.0"
authors = ["hoomp3"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "bench_main"
harness = false

[features]
default = ["ethnum"]
arbitrary = ["ethnum/arbitrary"]
ethnum = []
macros = ["ethnum/macros"]
testing = ["arbitrary", "macros"]

[dependencies]
cosmwasm-std = { version = "1.3.1", default-features = true }
cosmwasm-schema = "1.2.5"

ethnum = { git = "https://github.com/aether-protocol/ethnum-rs", branch = "cosmos", features = ["cosmos", "serde"] }
primitive-types = { version = "0.12.1", default-features = false }
schemars = "0.8.12"
serde = { version = "1.0.158", default-features = false, features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
proptest = "1.2.0"
rstest = "0.18.1"